@@ -1,5 +1,6 @@
 0.06
  - API change: Add full_name() method to People.
+ - API change: Remove ccnb() and oclc() methods in Object.
 
 0.05 2024-07-04T21:29:18+02:00
  - API change: Add 'external_ids' parameter to Object object.
